--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "rickapi",
   "version": "0.1.0",
   "private": true,
+  "homepage":"http://SKEGDEV.github.io/rick-and-morty-client",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
@@ -18,6 +19,7 @@
     "web-vitals": "^2.1.3"
   },
   "scripts": {
+    "deploy":"gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
