--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "rickapi",
   "version": "0.1.0",
   "private": true,
-  "homepage":"http://SKEGDEV.github.io/rick-and-morty-client",
+  "homepage":"http://SKEGDEV.github.io/rickapi",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
